Bug 124485 - Wrong (instead of no) bracketing of Bibliography Entries when formatted with Brackets = "[none]"
Summary: Wrong (instead of no) bracketing of Bibliography Entries when formatted with ...
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.3
Keywords: bibisected, bisected, regression
: 123809 (view as bug list)
Depends on:
Blocks: Bibliography
  Show dependency treegraph
 
Reported: 2019-04-01 19:27 UTC by xicht
Modified: 2019-05-10 10:38 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description xicht 2019-04-01 19:27:12 UTC
1. Open Writer

2. insert a Bibliography Entry (e.g., the preconfigured "ARJ00") into the text

3. Add a Bibliography after that
("Insert" -> "Table of Contents and Index" -> "Table of Contents, Index or Bibliography...", choose type "Bibliography"

4. In the settings of the Bibliography find the section "Formatting of entries" and set Brackets to "[none]" => the selection field will be empty (= will not show the selected word "[none]")

5. After that, the Bibliography Entry inserted before will be bracketed with "[" and "n" (which could actually be the beginnig of the string "[none]"):
ARJ00 will become [ARJ00n

Please note that in the German version the Brackets would be set to "[Keine]" which leads to a bracketing with "[" and "K" (just the first two letters of "[Keine]")

Thanks for a quick fix since we need it urgently :-)
Comment 1 Harald Koester 2019-04-01 21:08:19 UTC
Confirmed with version 6.2.2 release with Win 10. ==> OS = All.
Bug was introduced with version 6.2.0. Version 6.1.5: WFM. ==> Regression.
Comment 2 Dieter 2019-04-02 09:53:04 UTC
*** Bug 123809 has been marked as a duplicate of this bug. ***
Comment 3 Xisco Faulí 2019-04-02 09:59:51 UTC
bisecting it...
Comment 4 Xisco Faulí 2019-04-02 10:08:27 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=75bf9b4cbb668196bc20f4124a55d0a69f7ecdcf

author	Caolán McNamara <caolanm@redhat.com>	2018-12-12 16:09:09 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2018-12-13 20:18:09 +0100
commit 75bf9b4cbb668196bc20f4124a55d0a69f7ecdcf (patch)
tree 6079742a286f6ef5168df94db82422a1274c614a
parent 265d9e6ee9c777975e5ce32d977092d7d935ad97 (diff)
weld SwTOXSelectTabPage

Bisected with: bibisect-linux64-6.2

Adding Cc: to Caolán McNamara
Comment 5 Commit Notification 2019-04-02 16:32:52 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/9b325647f4e58c06a195a7d6a4e3946f015519ff%5E%21

Resolves: tdf#124485 [none] is at index 0

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-04-03 08:52:18 UTC
Verified in

Version: 6.3.0.0.alpha0+
Build ID: 93f1c3665fcdc31c36078f179ac37fd69d3ebb00
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, thanks for fixing this issue!!
Comment 7 Commit Notification 2019-04-03 08:54:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/0ece057c0ed75c2de108fc89b6c4e963f8ee3363%5E%21

Resolves: tdf#124485 [none] is at index 0

It will be available in 6.2.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2019-04-03 15:52:23 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2-3":

https://git.libreoffice.org/core/+/b94fff58381a58cc737dfb4df9c2ee961e0fe2f6%5E%21

Resolves: tdf#124485 [none] is at index 0

It will be available in 6.2.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Harald Koester 2019-05-10 10:38:31 UTC
Verified with version 6.2.3 (Win 10). -> Bug closed.