Resolves: tdf#124485 [none] is at index 0

rather than the meaning of nothing-selected which is -1

Change-Id: I3be01fa8d6b57f61aa660be5912f479e79cff2b2
Reviewed-on: https://gerrit.libreoffice.org/70142
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>